--- a/11.3 TinDog Project/css/style.css
+++ b/11.3 TinDog Project/css/style.css
@@ -1,5 +1,7 @@
+/* Manuel Pinto CSS Gradient Background Animation */
 .gradient-background {
-  background: linear-gradient(300deg, #00bfff, #ff4c68, #ef8172);
+  /*background: linear-gradient(300deg, #00bfff, #ff4c68, #ef8172);*/
+  background: linear-gradient(300deg, #8D918B, #E85D75, #C76D7E);
   background-size: 180% 180%;
   animation: gradient-animation 18s ease infinite;
 }
@@ -16,12 +18,14 @@
   }
 }
 
+
 .icon-square {
   width: 3rem;
   height: 3rem;
   border-radius: 0.75rem;
 }
 
+/*50% for circle image*/
 .profile-img {
   height: 100px;
   border-radius: 50%;
