--- a/Backend/4.5 blog ejs website/views/partials/header.ejs
+++ b/Backend/4.5 blog ejs website/views/partials/header.ejs
@@ -14,6 +14,7 @@
       </div>
         <ul class="nav navbar-nav navbar-right">
           <li id="home"><a href="/">HOME</a></li>
+          <li id="compose"><a href="/compose">CREATE A POST</a></li>
           <li id="about"><a href="/about">ABOUT</a></li>
           <li id="contact"><a href="/contact">CONTACT</a></li>
         </ul>
