--- a/Backend/4.5 blog ejs website/views/partials/footer.ejs
+++ b/Backend/4.5 blog ejs website/views/partials/footer.ejs
@@ -1,8 +1,8 @@
 </div>
 <div class="footer-padding"></div>
   <div class="footer">
-    <p>Copyright <script>document.write(new Date().getFullYear())</script> &copy; Designed & Developed by <a
-      href="https://github.com/shanibider">ShaniBider</a>. All rights reserved. </p>
+    <p>Copyright <script>document.write(new Date().getFullYear())</script> &copy; Designed & Developed by 
+      <a href="https://github.com/shanibider">ShaniBider</a>. All rights reserved. </p>
   </div>
 </div>
 </body>
