--- a/Backend/4.5 blog ejs website/views/post.ejs
+++ b/Backend/4.5 blog ejs website/views/post.ejs
@@ -1,6 +1,8 @@
 <%- include("partials/header"); -%>
 
+<div class="post-container">
   <h1><%=title%></h1>
   <p><%=content%></p>
+</div>
 
 <%- include("partials/footer"); -%>
