--- a/Backend/8.5 Family Travel Tracker/views/index.ejs
+++ b/Backend/8.5 Family Travel Tracker/views/index.ejs
@@ -9,19 +9,30 @@
 </head>
 
 <body>
-  <!-- post request with /add -->
-  <form action="/add" method="post">
-    <!-- show text or error in input holder -->
-    <input type="text" name="country" autofocus placeholder= "<%= locals.error ? error :  'Enter country name'%> ">
-    <button type="submit"> Add </button>
+  <form class="tab-view tab-view-height-auto" action="/user" method="post">
+    <% users.forEach(function(user) { %>
+      <input type="submit" name="user" value="<%= user.id %>" id="<%= user.id %>">
+      <label for="<%= user.id %>" style="background-color: <%= user.color %>;">
+        <%= user.name %>
+      </label>
+      <% }); %>
+
+        <input type="submit" name="add" value="new" id="tab">
+        <label for="tab">Add Family Member</label>
+
   </form>
 
-  <!-- all countries -->
+  <form action="/add" method="post">
+    <input type="text" name="country" autofocus placeholder="<%= locals.error ? error :  'Enter country name'%>">
+    <button type="submit" style="background-color: <%= color %>;">Add</button>
+  </form>
+
   <section class="ag-canvas">
     <svg class="ag-canvas_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
       version="1.1" viewBox="0 0 1008 651">
       <path id="AE" title="United Arab Emirates"
         d="M619.874,393.722L620.373,393.573L620.477,394.411L622.671,393.93L624.99,394.009L626.684,394.1L628.604,392.028L630.695,390.054L632.467,388.146L633.001,389.202L633.382,391.639L631.949,391.651L631.72,393.648L632.216,394.073L630.947,394.674L630.939,395.919L630.122,397.175L630.049,398.394L629.484,399.032L621.056,397.508L619.981,394.428z" />
+
       <path id="AF" title="Afghanistan"
         d="M646.879,356.901L649.738,358.201L651.853,357.745L652.438,356.188L654.651,355.669L656.231,354.617L656.791,351.832L659.154,351.154L659.594,349.902L660.917,350.843L661.762,350.952L663.323,350.975L665.438,351.716L666.295,352.143L668.324,351.017L669.27,351.694L670.174,350.085L671.85,350.159L672.281,349.641L672.578,348.213L673.785,346.975L675.303,347.785L674.998,348.869L675.846,349.038L675.585,351.994L676.694,353.137L677.672,352.404L678.916,352.057L680.663,350.486L682.594,350.745L685.486,350.751L685.985,351.758L684.353,352.15L682.928,352.795L679.71,353.2L676.699,353.931L675.063,355.439L675.725,356.899L676.046,358.603L674.649,360.033L674.766,361.335L673.995,362.549L671.328,362.444L672.43,364.663L670.646,365.507L669.455,367.511L669.609,369.491L668.514,370.415L667.477,370.109L665.334,370.537L665.027,371.451L662.939,371.446L661.377,373.289L661.278,376.039L657.635,377.374L655.682,377.092L655.114,377.794L653.438,377.386L650.634,377.865L645.936,376.228L648.479,373.298L648.249,371.202L646.125,370.65L645.905,368.565L644.987,365.921L646.187,364.094L644.966,363.599L645.736,361.148z" />
       <path id="AL" title="Albania"
@@ -374,27 +385,15 @@
         d="M562.709,526.998L561.219,526.697L560.274,527.059L558.917,526.548L557.776,526.516L555.989,525.158L553.821,524.698L552.996,522.803L552.989,521.752L551.788,521.432L548.615,518.177L547.733,516.471L547.169,515.946L546.09,513.602L549.224,513.922L550.135,514.26L551.082,514.192L552.634,512.299L555.073,509.904L556.076,509.676L556.417,508.67L558.014,507.516L560.138,507.12L560.319,508.2L562.658,508.142L563.957,508.754L564.562,509.472L565.896,509.683L567.353,510.617L567.359,514.312L566.813,516.347L566.692,518.55L567.143,519.426L566.826,521.172L566.402,521.443L565.663,523.593z" />
     </svg>
   </section>
-
-  <h2 class="total-count">Total Countries: <%=total%>  <!-- countries.length we render -->
+  <h2 class="total-count">Total Countries: <%=total%>
   </h2>
-
-
-  <!-- in this <script> i hold a value in ejs called countries, which is going to be an array of country codes (coming from the server),
-  i split each of the codes by "," [FR,IT,..] and i store them in country_codes (new array).
-  then i loop throught the array and i select the element with the same id of the country code i loop, and i change the color of that country (document.getElementById(code).style.fill = 'teal' ).
-  each country has an id of its country code (id="FR").
-  -->
   <script>
-    const country_codes = "<%= countries %>".split (",") 
-    console.log (typeof ("<%= countries %>"))
-    
-    country_codes.forEach ( code => {
-      document.getElementById (code).style.fill = 'teal'
+    const country_codes = "<%= countries %>".split(",")
+    console.log(typeof ("<%= countries %>"))
+    country_codes.forEach(code => {
+      document.getElementById(code).style.fill = "<%= color %>"
     });
-
   </script>
-
-
-
 </body>
+
 </html>
