--- a/Backend/6.1 Blog API Project/public/styles/main.css
+++ b/Backend/6.1 Blog API Project/public/styles/main.css
@@ -73,7 +73,7 @@ textarea:focus {
 a,
 button {
   text-decoration: none;
-  background-color: #007bff;
+  background-color: #ffbfd8;
   color: #fff;
   padding: 10px;
   font-size: 1em;
@@ -91,7 +91,7 @@ button.full-width {
 
 a,
 button:hover {
-  background-color: #0056b3;
+  background-color: #ff9fc4;
 }
 
 ul {
@@ -108,21 +108,21 @@ li:last-child {
 }
 
 a.edit {
-  background-color: #007bff;
+  background-color: #d8bfc6;
   /* margin-right: 10px; */
 }
 
 a.delete {
-  background-color: #e74c3c;
+  background-color: #888181;
 }
 
 a.delete:hover {
-  background-color: #c0392b;
+  background-color: #856b6b;
 }
 
 #newPostBtn {
   margin: 20px 0;
-  background-color: #2ecc71;
+  background-color: #ff7291;
   padding: 10px 15px;
   font-size: 1em;
   border-radius: 4px;
@@ -135,5 +135,5 @@ a.delete:hover {
 }
 
 #newPostBtn:hover {
-  background-color: #27ae60;
+  background-color: #fc315d;
 }
