--- a/Backend/9.2 Authentication Lv.2/views/secrets.ejs
+++ b/Backend/9.2 Authentication Lv.2/views/secrets.ejs
@@ -4,7 +4,7 @@
     <div class="container">
       <i class="fas fa-key fa-6x"></i>
       <h1 class="display-3">You've Discovered My Secret!</h1>
-      <p class="secret-text">Jack Bauer is my hero.</p>
+      <p class="secret-text">I quietly celebrate every small victory in my fitness journey.</p>
       <hr>
 
     </div>
